# octra-sqlite

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASE.md  SECURITY.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: alpha-feedback.yml
.github/workflows/: ci.yml
circle/: README.md
circle/crypto/: README.md  tweetnacl.c  tweetnacl.h
circle/source/: octra_sqlite_circle.c
circle/wasm/: octra_sqlite_circle.wasm
config/: defaults.json
docs/: handoff.md  headless.md  json-output.md  library-boundary.md  octra-questions.md  operations.md  policy.md  public-surface.md  storage-model.md  toolchain.md
docs/proofs/: devnet.md
docs/spec/: osr1.md  osw1.md  owner-write-intent.md
examples/: README.md  artists.sql  organization-person.sql  remilia-collections.sql
examples/remilia-read-api/: README.md  main.rs
release/: README.md  octra-sqlite-0.1.0.json  octra-sqlite-0.2.0.json  octra-sqlite-0.2.1.json  octra-sqlite-0.3.0.json  octra-sqlite-0.3.1.json  octra-sqlite-0.3.2.json  octra-sqlite-0.3.3.json  octra-sqlite-0.3.4.json  octra-sqlite-0.4.0.json  octra-sqlite-0.5.0.json
scripts/: audit-wasm.sh  build-wasm.sh  install-cli.sh
src/: lib.rs  main.rs  osr1.rs  output.rs
src/cli/: mod.rs  output.rs  portability.rs  shell.rs
src/client/: config.rs  database.rs  error.rs  mod.rs  raw.rs  results.rs  rpc.rs  safety.rs  session.rs  transport.rs  wallet.rs  write.rs
src/protocol/: base58.rs  error.rs  mod.rs  osr1.rs  osw1.rs  target.rs  tx.rs
tests/: contract_invariants.rs  json_contract.rs  public_surface.rs  source_boundaries.rs  wasm_host_harness.rs
tests/fixtures/osr1/: basic.json
