[package]
name = "octra-sqlite"
version = "0.5.0"
edition = "2021"
rust-version = "1.87"
license = "MIT"
description = "Real SQLite inside an Octra Circle, with a Rust CLI and client library"
repository = "https://github.com/tomismeta/octra-sqlite"
homepage = "https://github.com/tomismeta/octra-sqlite"
readme = "README.md"
keywords = ["octra", "sqlite", "wasm", "blockchain", "database"]
categories = ["command-line-utilities", "database"]
include = [
    "/Cargo.lock",
    "/Cargo.toml",
    "/CHANGELOG.md",
    "/LICENSE",
    "/README.md",
    "/RELEASE.md",
    "/circle/source/octra_sqlite_circle.c",
    "/circle/wasm/octra_sqlite_circle.wasm",
    "/config/defaults.json",
    "/docs/headless.md",
    "/docs/json-output.md",
    "/docs/library-boundary.md",
    "/docs/operations.md",
    "/docs/public-surface.md",
    "/docs/spec/**",
    "/docs/storage-model.md",
    "/docs/toolchain.md",
    "/examples/README.md",
    "/examples/artists.sql",
    "/examples/remilia-collections.sql",
    "/examples/remilia-read-api/README.md",
    "/examples/remilia-read-api/main.rs",
    "/release/README.md",
    "/release/*.json",
    "/scripts/audit-wasm.sh",
    "/scripts/build-wasm.sh",
    "/scripts/install-cli.sh",
    "/src/**",
    "/tests/**",
]

[package.metadata.docs.rs]
no-default-features = true
features = ["http"]

[features]
default = ["cli", "http"]
cli = ["dep:anyhow", "dep:clap", "dep:rpassword", "dep:rustyline", "http"]
http = ["dep:reqwest"]
wasm-behavior = ["dep:wasmtime"]

[[bin]]
name = "octra-sqlite"
path = "src/main.rs"
required-features = ["cli"]

[[example]]
name = "remilia-read-api"
path = "examples/remilia-read-api/main.rs"
required-features = ["http"]

[dependencies]
anyhow = { version = "1", optional = true }
base64 = "0.22"
clap = { version = "4", features = ["derive"], optional = true }
dirs = "6"
ed25519-dalek = "2"
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"], optional = true }
rpassword = { version = "7", optional = true }
rustyline = { version = "18.0.1", default-features = false, features = ["with-file-history"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
wasmtime = { version = "39", optional = true }
zeroize = "1"
